traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:7: error: not found: value Direction
                                 else {if (getDirection()==Direction.EST) {setPos(getX(),getY()+1)}
                                                           ^